Add `format-date` helper

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,9 +1,9 @@
 <h3>Date & Time</h3>
 
 <ul>
-  <li>{{format 'date' model.date}}</li>
-  <li>{{format 'date' model.date weekday="long"}}</li>
-  <li>{{format 'date' model.date day="numeric" month="long" year="numeric"}}</li>
+  <li>{{format-date model.date}}</li>
+  <li>{{format-date model.date weekday="long"}}</li>
+  <li>{{format-date model.date day="numeric" month="long" year="numeric"}}</li>
 </ul>
 
 <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/DateTimeFormat" target="_blank">Intl.DateTimeFormat at MDN</a>
