Add `format-message` helper

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -11,9 +11,9 @@
 <h3>Message</h3>
 
 <ul>
-  <li>{{format 'message' model.car}}</li>
-  <li>{{format 'message' model.hello name='Ember'}}</li>
-  <li>{{format 'message' model.photos numPhotos=model.numPhotos}}</li>
+  <li>{{format-message model.car}}</li>
+  <li>{{format-message model.hello name='Ember'}}</li>
+  <li>{{format-message model.photos numPhotos=model.numPhotos}}</li>
 </ul>
 
 <a href="https://github.com/yahoo/intl-messageformat" target="_blank">IntlMessageFormat at GitHub</a>
