Add `format-number` helper

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -21,9 +21,9 @@
 <h3>Number</h3>
 
 <ul>
-  <li>{{format 'number' model.number}}</li>
-  <li>{{format 'number' model.amount style="currency" currency="USD"}}</li>
-  <li>{{format 'number' model.percent style="percent"}}</li>
+  <li>{{format-number model.number}}</li>
+  <li>{{format-number model.amount style="currency" currency="USD"}}</li>
+  <li>{{format-number model.percent style="percent"}}</li>
 </ul>
 
 <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/NumberFormat" target="_blank">Intl.NumberFormat at MDN</a>
