--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -31,9 +31,9 @@
 <h3>Relative</h3>
 
 <ul>
-  <li>{{format 'relative' model.yesterday}}</li>
-  <li>{{format 'relative' model.beforeYesterday}}</li>
-  <li>{{format 'relative' model.lastMonth}}</li>
+  <li>{{format-relative model.yesterday}}</li>
+  <li>{{format-relative model.beforeYesterday}}</li>
+  <li>{{format-relative model.lastMonth}}</li>
 </ul>
 
 <a href="https://github.com/yahoo/intl-relativeformat" target="_blank">IntlRelativeFormat at GitHub</a>
