--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,5 +1,9 @@
 <h2 id='title'>Welcome to Ember.js</h2>
 
-{{view "select" content=locales value=selectedLocale}}
+{{view "select"
+  content=locales
+  value=selectedLocale
+  optionValuePath="content.code"
+  optionLabelPath="content.displayName"}}
 
 {{outlet}}
